--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "squirrel-datasets-core" %}
-{% set version = "0.1.2" %}
+{% set version = "0.1.7" %}
 
 package:
   name: {{ name|lower }}
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 1
+  number: 0
 
 requirements:
   host:
@@ -22,6 +22,7 @@ requirements:
     - python >=3.8
     - datasets
     - squirrel-core >=0.12.1
+    - dill >=0.3.5.1
     - numpy
     - pillow
     - pytorch
@@ -32,7 +33,6 @@ requirements:
     - docutils
     - fire
     - scipy
-
 
 test:
   imports:
